# hpc-aio

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compose-dev.yaml
cmake/configure_files/: hpc_aio-config-version.cmake.in  hpc_aio-config.cmake.build.in  hpc_aio-config.cmake.install.in  hpc_aio_config.hpp.in  hpc_aio_module.lua.in
cmake/modules/: Findlibuv.cmake  SetupCompiler.cmake  hpc_aio-utils.cmake
dependency/: CMakeLists.txt
environment/: Dockerfile  first_time_setup.sh  hostfile  hosts  setup.sh  setup_network.sh  spack-docker.yaml  spack.yaml
environment/master/: Dockerfile
environment/worker/: Dockerfile
src/hpc_aio/: CMakeLists.txt
src/hpc_aio/client/: library.h
src/hpc_aio/common/: data_structure.h  logging.h  singleton.h
src/hpc_aio/service/: CMakeLists.txt  main.cpp  server.cpp  server.h
tests/: CMakeLists.txt
tests/poc/: CMakeLists.txt  async.cpp  inotify_watch.cpp  timer.cpp  uv_inotify_watch.cpp  work_queue.cpp
tests/unit/: CMakeLists.txt  pipeline.cpp
