set(HPC_AIO_SERVICE_SRC main.cpp)
set(HPC_AIO_SERVICE_PRIVATE_HEADER )
set(HPC_AIO_SERVICE_PUBLIC_HEADER )
add_executable(hpc_io_service ${HPC_AIO_SERVICE_SRC} ${HPC_AIO_SERVICE_PUBLIC_HEADER} ${HPC_AIO_SERVICE_PRIVATE_HEADER})
target_link_libraries(hpc_io_service ${LIBUV_LIBRARY} ${CPP_LOGGER_LIBRARIES})
install(
        TARGETS hpc_io_service
        EXPORT ${HPC_AIO_EXPORTED_TARGETS}
        LIBRARY DESTINATION ${HPC_AIO_INSTALL_LIB_DIR}
        ARCHIVE DESTINATION ${HPC_AIO_INSTALL_LIB_DIR}
        RUNTIME DESTINATION ${HPC_AIO_INSTALL_BIN_DIR}
)
target_compile_definitions(hpc_io_service PUBLIC HPC_AIO_HAS_CONFIG)